# seam

./: .env.example  .gitignore  AGENTS.md  APP_FLOW.md  BACKEND_STRUCTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DISCOVERY.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  TECH_STACK.md  lessons.md  progress.txt  pyproject.toml
.claude/tasks/: graph-search-recipes-issues.md  phase11-topology-visual-qa-issues.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  explorer-visual.yml  no-egress.yml  release.yml  seam-index.yml
benchmarks/: run_benchmark.py  semantic_ann_scale.py  semantic_recall.py  soak.py  trace_loop.py
docs/: ARCHITECTURE.md  CONCEPTS.md  CONFIGURATION.md  CONTRACT.md  agent-answerability-benchmark.md  architecture.html  benchmark.md  competitive-benchmark.md  docs-grounding-architecture.md  graph-search-recipes.md
docs/adr/: 001-python-over-typescript.md  002-sqlite-storage.md  003-heuristic-execution-flows.md  004-watchdog-file-watcher.md  005-phase0-language-scope.md  008-language-expansion.md  009-swift-support.md  010-frontend-explorer-architecture.md  ADR-007-louvain-clustering.md
docs/api-contracts/: mcp-tools.yaml
docs/assets/: demo.tape
docs/database/: schema.sql
docs/prd/: agent-answerability-benchmark.md  agent-answerability-graph-quality-coherence.md  agent-answerability-protocol-edge-calibration.md  graph-search-recipes.md  phase1-core.md  phase10-swift.md  phase11-codebase-memory-roadmap.md  phase11-explorer-3d-constellation-polish.md  phase11-explorer-cleanup.md  phase11-explorer-phase-b.md  phase11-explorer-phase-c.md  phase11-explorer-phase-d.md  phase11-explorer-redesign.md  phase11-explorer-topology-visual-qa.md  phase11-p1-1-seam-schema.md  phase11-p1-4-seam-architecture.md  phase11-p2-1-3d-constellation-reference.md  phase11-p2-1-3d-constellation.md  phase11-p2-2-explorer-upgrades.md  phase11-p3-1-route-nodes-http-calls.md  phase11-p3-2-config-resource-links.md  phase11-p3-3-test-edges.md  phase11-p3-4-raises-exception-edges.md  phase11-p5-1-npm-shim.md  phase11-p5-2-release-hardening.md  phase11-p5-3-installer-write-scope-audit.md  phase11-p5-4-no-egress-proof.md  phase11-p5-5-diagnostics-soak.md  phase11-rfc-cross-repo-analysis.md  phase11-rfc-graph-artifact-export-import.md  phase11-rfc-http-call-extraction-quality.md  phase11-rfc-hybrid-exact-type-resolution.md  phase11-rfc-infra-graph-compose-dockerfile.md  phase11-rfc-preview-only-installer-autodetect.md  phase11-rfc-protocol-edges-http-calls.md  phase11-rfc-semantic-discovery-productization.md  phase11-rfc-trusted-shared-index-bootstrap.md  phase1b-confidence.md  phase1b-go-rust.md  phase1b-qa-hardening.md  (+11 more)
memory/architecture/: 001-graph-model.md
memory/decisions/: 001-language-python.md
pkg/npm/: README.md  bin.js  package-lock.json  package.json
seam/: __init__.py  config.py
seam/_web/: index.html
seam/analysis/: __init__.py  affected.py  builtins.py  byte_budget.py  changes.py  cluster_naming.py  clustering.py  confidence.py  diagnostics.py  embeddings.py  flows.py  impact.py  imports.py  imports_ext.py  imports_resolve.py  processes.py  relevance.py  rwr.py  staleness.py  steer.py  synthesis.py  synthesis_channels.py  testpaths.py  trace_capture.py  traversal.py
seam/cli/: architecture.py  artifacts.py  fetch.py  file_sink.py  graph_search.py  grounding.py  install.py  main.py  output.py  plan.py  read.py  schema.py  serve.py  snippet.py  suspects.py  workspace.py
seam/eval/: trace_derive.py
seam/indexer/: artifact.py  bootstrap.py  cluster_index.py  config_resources.py  db.py  docs.py  embedding_index.py  exceptions.py  field_access.py  field_access_c_cpp.py  field_access_ext.py  field_access_ext2.py  field_access_go_rust.py  field_access_php_swift.py  field_access_ts.py  graph.py  graph_c.py  graph_c_cpp.py  graph_common.py  graph_cpp.py  graph_csharp.py  graph_go.py  graph_go_rust.py  graph_java.py  graph_java_csharp.py  graph_php.py  graph_python.py  graph_ruby.py  graph_ruby_php.py  graph_rust.py  graph_scope_infer.py  graph_scope_infer_ext.py  graph_scope_infer_ext2.py  graph_swift.py  graph_swift_infer.py  graph_typescript.py  infra_resources.py  init_index.py  migrations.py  parser.py  (+11 more)
seam/installer/: __init__.py  claude.py  codex.py  core.py  cursor.py  gemini.py  guide.py  jsonfile.py  markdownfile.py  plan.py  tomlfile.py  vscode.py  zed.py
seam/query/: architecture.py  clusters.py  comments.py  context.py  engine.py  fts.py  graph_recipes.py  graph_search.py  grounding.py  layout.py  names.py  pack.py  pack_evidence.py  plan.py  schema.py  semantic.py  semantic_contract.py  snippet.py  structure.py  suspects.py  vec_extension.py  vector_store.py
seam/server/: graph_api.py  grounding_handler.py  handler_common.py  impact_handler.py  mcp.py  suspects_handler.py  tools.py  trace_handler.py  web.py  web_architecture.py  web_graph_search.py  web_layout.py  web_schema.py
seam/watcher/: __main__.py  daemon.py
seam/workspace/: __init__.py  federation.py  registry.py
tests/eval/: __init__.py  answerability_coherence.py  answerability_harness.py  answerability_report.py  answerability_scenarios.json  eval_report.py  gen_golden.py  golden.json  recall_harness.py  test_answerability.py  test_answerability_coherence.py  test_metrics.py  test_recall_regression.py
tests/fixtures/: sample.c  sample.cpp  sample.cs  sample.go  sample.java  sample.php  sample.py  sample.rb  sample.rs  sample.swift  sample.ts
tests/integration/: test_affected_handler.py  test_artifact_lifecycle.py  test_changes.py  test_cli_e4_surface.py  test_cli_impact_index_status.py  test_cli_impact_max_bytes.py  test_cli_json.py  test_cli_read.py  test_cli_version.py  test_cluster_index.py  test_clusters_handler.py  test_composition_holds_edges_integration.py  (+71 more)
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
(+333 files in other folders)
