[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name is "seam-mcp" because the PyPI name "seam" is taken by an
# unrelated package (Seam Labs' smart-lock API SDK). The import package and the
# console command both stay "seam" (distribution name != import name is standard).
name = "seam-mcp"
version = "0.2.0"
description = "Local code intelligence MCP server for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "code-intelligence", "tree-sitter", "sqlite", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-swift>=0.7.3",
    "tomlkit>=0.15.0",
]

[project.optional-dependencies]
# MCP server support is OPTIONAL — the CLI (init/query/search/context/impact/…) runs
# fully without it. `pip install 'seam-mcp[server]'` adds the `seam start` MCP server.
server = ["mcp>=1.0.0"]

[project.scripts]
seam = "seam.cli.main:app"

[project.urls]
Homepage = "https://github.com/Catafal/seam"
Repository = "https://github.com/Catafal/seam"

[dependency-groups]
dev = [
    # mcp here (not in core deps) so the dev/test env exercises the MCP server while
    # end-user `pip install seam-mcp` stays mcp-free; opt in with the `server` extra.
    "mcp>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true   # tree-sitter stubs not always available
warn_return_any = false
warn_unused_configs = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

# ── Hatch ────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["seam"]

# Ship the canonical SQL schema INSIDE the package so `seam init` works from an installed
# wheel (docs/ is not packaged). db.py reads seam/_data/schema.sql when present, else the
# repo's docs/database/schema.sql in a dev checkout. Keeps docs/ as the single source.
[tool.hatch.build.targets.wheel.force-include]
"docs/database/schema.sql" = "seam/_data/schema.sql"
