[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name is "seam-code" because the PyPI name "seam" is taken by an
# unrelated package (Seam Labs' smart-lock API SDK). The import package and the
# console command both stay "seam" (distribution name != import name is standard).
name = "seam-code"
version = "0.4.0"
description = "Local code intelligence MCP server for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "code-intelligence", "tree-sitter", "sqlite", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-swift>=0.7.3",
    "tomlkit>=0.15.0",
]

[project.optional-dependencies]
# MCP server support is OPTIONAL — the CLI (init/query/search/context/impact/…) runs
# fully without it. `pip install 'seam-code[server]'` adds the `seam start` MCP server.
server = ["mcp>=1.0.0"]
# Web explorer is OPTIONAL — `pip install 'seam-code[web]'` adds the `seam serve` HTTP
# server + React SPA. FastAPI brings Starlette + Pydantic, but NOT the ASGI server —
# uvicorn must be listed explicitly or `seam serve` exits with "uvicorn is not installed".
web = ["fastapi>=0.110", "uvicorn>=0.30", "numpy>=1.26"]
# Semantic (embedding-based) search is OPTIONAL — `pip install 'seam-code[semantic]'`
# adds local vector search via quantized ONNX on CPU (no torch, ~67MB model download).
# Requires `seam init --semantic` to build the embeddings table before use.
semantic = ["fastembed>=0.4"]
# ANN acceleration tier is OPTIONAL — `pip install 'seam-code[semantic-ann]'` adds
# sqlite-vec, a native SQLite extension that powers KNN queries via a vec0 virtual
# table.  Kept separate from [semantic] because sqlite-vec is a NATIVE extension with
# real packaging caveats (e.g. macOS system SQLite may block enable_load_extension);
# the brute-force mmap path (WS2a) always remains the safe fallback for every
# [semantic] user who does not need ANN acceleration.
semantic-ann = ["sqlite-vec>=0.1.0"]

[project.scripts]
seam = "seam.cli.main:app"

[project.urls]
Homepage = "https://github.com/Catafal/seam"
Repository = "https://github.com/Catafal/seam"

[dependency-groups]
dev = [
    # mcp here (not in core deps) so the dev/test env exercises the MCP server while
    # end-user `pip install seam-code` stays mcp-free; opt in with the `server` extra.
    "mcp>=1.0.0",
    # fastapi here so integration tests (TestClient) run without needing --extra web.
    # End-users who only want the CLI get neither mcp nor fastapi.
    "fastapi>=0.110",
    # numpy here so the constellation-layout tests (tests/unit/test_layout.py,
    # tests/integration/test_web_api.py) collect without --extra web. numpy stays a
    # [web] RUNTIME extra — the base CLI install never imports it (only web_layout does).
    "numpy>=1.26",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # test-only: validates the installer's generated YAML frontmatter
    # (tests/unit/test_installer.py). Not a runtime dependency.
    "pyyaml>=6.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true   # tree-sitter stubs not always available
warn_return_any = false
warn_unused_configs = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

# ── Hatch ────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["seam"]
# seam/_web/ is gitignored (built SPA — never committed). Without this entry hatch would
# silently omit the directory from the wheel; listing it as an artifact overrides that and
# ensures `seam serve` can find the built frontend when installed from PyPI.
artifacts = ["seam/_web/**/*"]

# Ship the canonical SQL schema INSIDE the package so `seam init` works from an installed
# wheel (docs/ is not packaged). db.py reads seam/_data/schema.sql when present, else the
# repo's docs/database/schema.sql in a dev checkout. Keeps docs/ as the single source.
[tool.hatch.build.targets.wheel.force-include]
"docs/database/schema.sql" = "seam/_data/schema.sql"

# Sdist must ALSO ship the built SPA. `uv build` builds sdist→wheel, so a wheel built
# from the sdist would otherwise lose seam/_web (gitignored → excluded from the sdist),
# leaving `seam serve` with no frontend. Mirroring the wheel artifact here keeps both
# distributions consistent. (Run `make build-web` before building a release.)
[tool.hatch.build.targets.sdist]
artifacts = ["seam/_web/**/*"]
# Exclude the frontend toolchain from the sdist — the BUILT SPA already ships via the
# artifact above (seam/_web). Without this, hatchling sweeps web/node_modules (~18MB of
# esbuild/typescript) into the sdist, bloating it and stalling the PyPI upload.
exclude = ["web"]
